# PoseShield

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
config_files/: basic_config.yaml  global_path.yaml  inference_config.yaml
data/dataset/: test_list.csv  train_list.csv
data/motion_canonical/: README.md
demo_asset/: motionfix_004422_135.npy  motionfix_005334_135.npy  motionfix_005783_135.npy  x_ori_210.pkl  x_ori_408.pkl  x_ori_436.pkl
demos/: demo_blender_contact_render.sh  demo_motion.sh  demo_motion_to_mesh_contact_render.sh  demo_pose.py
demos/contact_render_demo/: README.md  contact_masks.npz  contact_summary.json  optimized_motion.npy  original_motion.npy
experimental/safield_demo/: README.md  config.yaml  crop_release_figure.py  demo_examples.json  export_release_objs.py  inference.py  network.py  render_release_figure.py  render_release_figure_blender.py  run_demo.py  search_shape_conditioned_examples.py  search_stronger_shape_demo.py  verify_selected_demo.py
poseshield/common/: collision.py  config.py  geometry.py  network.py  utils.py
poseshield/pose/: data_augmentation.py  dataset.py  evaluate.py  losses.py  preprocess.py  resolve_dataset_test_slsqp.py  resolve_slsqp.py  train.py  utils.py
tests/: test_exact_fcl_checkpoint_selection.py
tools/: blender_render.py  check_assets.py  compare_topology_collision_results.py  convert_topology_distances.py  evaluate_exact_fcl.py  export_motion_contact_masks.py  generate_motion_html.py  render_motion_blender.py  validate_motion_format.py  verify_topology_distances.py
(+30 files in other folders)
