[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poseshield"
version = "0.1.0"
description = "Learned collision field for self-penetration resolution in SMPL-H poses and motions"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["poseshield*"]
